--- a/assets/views/bio.html
+++ b/assets/views/bio.html
@@ -1,9 +1,13 @@
 <div class="page-bio">
 	<div class="text-block">
-		<p>Sylvia Prokopowicz Luchez studied English Literature and Visual Art at the University of Chicago.
-			She is pursuing a Master’s degree in Arts Education at DePaul University.
-			Sylvia teaches Art at Chicago Grammar School, where she has worked with students preschool through 8th grade since 2012.
-			Her work has been exhibited at the Second Fridays Gallery Walk in Pilsen and at the Co-Prosperity Sphere in Bridgeport.</p>
+		<p>
+      Sylvia Prokopowicz Luchez studied English Literature and Visual Art at the University of Chicago and holds a Master’s degree in Arts Education from DePaul University.
+      Sylvia taught Art and Language Arts at Chicago Grammar School for 5 years, where she worked with students preschool through 8th grade.
+      Her work has been exhibited at the Second Fridays Gallery Walk in Pilsen and at the Co-Prosperity Sphere in Bridgeport.
+    </p>
+    <p>
+      She is currently teaching summer school at Oak Park and River Forest High School.
+    </p>
 		<div class="picture-holder">
 			<img src="assets/images/sylvia_bio_604x453.jpg" class="responsive" />
 		</div>
