Adding Ceramics Project

--- a/assets/views/bio.html
+++ b/assets/views/bio.html
@@ -1,7 +1,7 @@
 <div class="page-bio">
 	<div class="text-block">
 		<p>
-      Sylvia Prokopowicz Luchez studied English Literature and Visual Art at the University of Chicago and holds a Master’s degree in Arts Education from DePaul University.
+      Sylvia Prokopowicz-Luchez studied English Literature and Visual Art at the University of Chicago and holds a Master’s degree in Arts Education from DePaul University.
       Sylvia taught Art and Language Arts at Chicago Grammar School for 5 years, where she worked with students preschool through 8th grade.
       Her work has been exhibited at the Second Fridays Gallery Walk in Pilsen and at the Co-Prosperity Sphere in Bridgeport.
     </p>
