--- a/assets/views/bio.html
+++ b/assets/views/bio.html
@@ -1,11 +1,9 @@
 <div class="page-bio">
 	<div class="text-block">
 		<p>
-      Sylvia Prokopowicz Luchez studied English Literature and Visual Art at the University of Chicago and holds a Master’s degree in Arts Education from DePaul University. Sylvia taught art and language arts at Chicago Grammar School for 5 years, where she worked with students preschool through 8th grade.
-      Her work has been exhibited at the Second Fridays Gallery Walk in Pilsen and at the Co-Prosperity Sphere in Bridgeport.
-    </p>
-    <p>
-      Sylvia maintains her studio practice, tutors students, and teaches Art Foundations at Oak Park and River Forest High School.
+      Sylvia Luchez studied English literature and visual art at the University of Chicago and holds a master’s degree in art education from DePaul University.
+      Sylvia makes art, tutors students, and teaches summer art classes at her local high school.
+      Her work has been exhibited at the Second Fridays Gallery Walk and at the Co-Prosperity Sphere in Chicago.
     </p>
 		<div class="picture-holder">
 			<img src="assets/images/sylvia_bio_604x453.jpg" class="responsive" />
